--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,232 @@
 body {
-margin: 0;
+    margin: 0;
 
-font-family: "Roboto", "Arial", sans-serif;
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #283136;
+
+    background-color: white;
+    background-image: url(img/whiteback.png);
+    background-position: top center;
+    background-repeat:no-repeat;
 }
+
+a {
+    text-decoration: none;
+}
+
+.site-navigation,
+.user-navigation {
+    list-style: none;
+}
+
+.site-navigation a {
+    font: inherit;
+    line-height: 30px;
+    font-weight: 500;
+    color: #000000;    
+}
+
+.site-navigation a:hover {
+    color: #fb565a;   
+}
+
+.site-navigation a:active {
+    color: rgba(0, 0, 0, 0.302);    
+}
+
+.user-navigation a{
+    font: inherit;
+    line-height: 30px;
+    font-weight: 500;
+    color: #000000;      
+}
+
+.user-navigation a:hover {
+    color: #fb565a;     
+}
+
+.user-navigation a:active {
+    color: rgba(0, 0, 0, 0.302); 
+}
+
+.button {
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 500;
+    text-align: center;
+    color: #ffffff;
+
+    background-color: #fb565a;
+    border:none;
+}
+
+.button:hover {
+    background-color: #e74246;    
+}
+
+.button:active {
+    background-color: #d7373b;
+
+    font-family: "Roboto", "Arial", sans-serif;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 0.302);
+}
+
+.button_application{
+    background-color: #00ca74;
+    color: #ffffff;
+}
+
+.button_application:hover {
+    background-color: #00bc6c;    
+}
+    
+.button_application:active {
+    background-color: #00aa62;
+        
+    font-family: "Roboto", "Arial", sans-serif;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 0.302);
+}
+
+.button_plantation{
+    background-color: #efc84a;
+    color: #ffffff;
+}
+    
+.button_plantation:hover {
+    background-color: #eab534;    
+}
+        
+.button_plantation:active {
+    background-color: #e5a722;
+            
+    font-family: "Roboto", "Arial", sans-serif;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 0.302);
+}
+
+.features-list {
+    list-style: none;
+}
+
+.features-list h3 {
+    font-size: 55px;
+    line-height: 55px;
+    font-weight: 500;
+    color: #000000;   
+}
+
+.projects {
+    list-style: none;    
+}
+
+.project h3 {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 700;
+    color: #000000; 
+    text-transform: uppercase;
+}
+
+.application-header {
+    font-size: 45px;
+    line-height: 45px; 
+    color: #000000;    
+}
+
+.applications h3 {
+    text-transform: uppercase;
+}
+
+.foot-head {
+    font-size: 36px;
+    line-height: 36px;
+    color: #000000; 
+}
+
+main h1 {
+    font:inherit;
+    font-size: 55px;
+    line-height: 55px;
+    color: #000000;   
+}
+
+fieldset legend,
+.container p {
+    font:inherit;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 700;
+    color: #000000; 
+}
+
+.show {
+    font:inherit;
+    font-size:16px;
+    line-height: 18px;
+    font-weight: 500;
+
+    background-color: #eeeeee;
+    border:none;
+}
+
+.show:hover {
+    background-color: #dfdfdf;
+}
+
+.show:active {
+    color: rgba(0, 0, 0, 0.302);
+    background-color: #d5d5d5; 
+}
+ 
+
+.container ul {
+    list-style: none;
+    text-transform: uppercase;
+}
+
+.filter-price {
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
+    color: #000000;      
+}
+
+.filter-type,
+.filter-name {
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.302); 
+}
+
+.template-list {
+    list-style: none;
+}
+
+.template-list a {
+
+}
+
+.template {
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 700;
+    color: #000000; 
+}
+
+.template:hover {
+    color: #fb565a;
+}
+ 
+.template:active {
+    color: rgba(0, 0, 0, 0.302);  
+}
+
+
