--- a/css/style.css
+++ b/css/style.css
@@ -1278,6 +1278,11 @@ html, body {
   width: 260px;
 }
 
+.contacts iframe {
+  width: 100%;
+  height: 416px;
+}
+
 .clean {
   margin: 0;
   padding: 0;
